added single salary prediction

--- a/Part 2 - Regression/Section 4 - Simple Linear Regression/simple_linear_regression_MyOwn.ipynb
+++ b/Part 2 - Regression/Section 4 - Simple Linear Regression/simple_linear_regression_MyOwn.ipynb
@@ -665,6 +665,91 @@
     }
    ],
    "execution_count": 25
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": ""
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Making a single prediction (for example the salary of an employee with 12 years of experience)"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-01T19:21:49.939727Z",
+     "start_time": "2025-08-01T19:21:49.935620Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[138531.00067138]\n"
+     ]
+    }
+   ],
+   "execution_count": 26,
+   "source": "print(regressor.predict([[12]]))"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Therefore, our model predicts that the salary of an employee with 12 years of experience is $ 138967,5.\n",
+    "\n",
+    "Important note: Notice that the value of the feature (12 years) was input in a double pair of square brackets. That's because the \"predict\" method always expects a 2D array as the format of its inputs. And putting 12 into a double pair of square brackets makes the input exactly a 2D array. Simply put:\n",
+    "\n",
+    "12→scalar\n",
+    "\n",
+    "[12]→1D array\n",
+    "\n",
+    "[[12]]→2D array"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Getting the final linear regression equation with the values of the coefficients"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-01T19:21:58.153433Z",
+     "start_time": "2025-08-01T19:21:58.149985Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9312.57512673]\n",
+      "26780.09915062818\n"
+     ]
+    }
+   ],
+   "execution_count": 27,
+   "source": [
+    "print(regressor.coef_)\n",
+    "print(regressor.intercept_)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Therefore, the equation of our simple linear regression model is:\n",
+    "\n",
+    "Salary=9345.94×YearsExperience+26816.19\n",
+    "\n",
+    "Important Note: To get these coefficients we called the \"coef_\" and \"intercept_\" attributes from our regressor object. Attributes in Python are different than methods and usually return a simple value or an array of values."
+   ]
   }
  ]
 }
