Added multiple linear regression model to predict profits of start ups

--- a/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/data_preprocessing_tools_myOwn.ipynb
+++ b/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/data_preprocessing_tools_myOwn.ipynb
@@ -191,7 +191,7 @@
     "#using passthrough for the remainder argument, allows \"keeping\" the columns age and salary, otherwise they would have been thrown away\n",
     "X = np.array(ct.fit_transform(X)) #apply the transformation to the column of my matrix\n",
     "\n",
-    "print(x)"
+    "print(X)"
    ],
    "outputs": [
     {
