Added two examples to the multiple linear regression model

--- a/Part 2 - Regression/Section 5 - Multiple Linear Regression/multiple_linear_regression_MyOwn.ipynb
+++ b/Part 2 - Regression/Section 5 - Multiple Linear Regression/multiple_linear_regression_MyOwn.ipynb
@@ -698,6 +698,65 @@
     }
    ],
    "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Single Prediction with custom values. Example: R&D cost = 160000, Admin Cost = 130000, Marketing cost = 300000, State = California"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T07:26:46.563544Z",
+     "start_time": "2025-08-05T07:26:46.558436Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(regressor.predict([[1, 0, 0, 160000, 130000, 300000]]))",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[181566.92]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Getting the final linear regression equation with the values of the coefficients"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T07:27:35.551362Z",
+     "start_time": "2025-08-05T07:27:35.547742Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(regressor.coef_)\n",
+    "print(regressor.intercept_)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 8.66e+01 -8.73e+02  7.86e+02  7.73e-01  3.29e-02  3.66e-02]\n",
+      "42467.5292485298\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Profit=86.6×Dummy State 1−873×Dummy State 2+786×Dummy State 3+0.773×R&D Spend+0.0329×Administration+0.0366×Marketing Spend+42467.53"
   }
  ]
 }
