--- a/Part 2 - Regression/Section 8 - Decision Tree Regression/decision_tree_regression_MyOwn.ipynb
+++ b/Part 2 - Regression/Section 8 - Decision Tree Regression/decision_tree_regression_MyOwn.ipynb
@@ -591,7 +591,7 @@
    },
    "cell_type": "code",
    "source": [
-    "X_grid = np.arange(min(X), max(X), 0.01)\n",
+    "X_grid = np.arange(X.min(), X.max(), 0.01)\n",
     "X_grid = X_grid.reshape((len(X_grid), 1))\n",
     "plt.scatter(X, y, color = 'red')\n",
     "plt.plot(X_grid, regressor.predict(X_grid), color = 'blue')\n",
