Added K-Nearest Neighbors classification

--- a/Part 3 - Classification/Section 14 - Logistic Regression/logistic_regression.ipynb
+++ b/Part 3 - Classification/Section 14 - Logistic Regression/logistic_regression.ipynb
@@ -1117,7 +1117,7 @@
     "    plt.scatter(\n",
     "        X_set[y_set == j, 0],\n",
     "        X_set[y_set == j, 1],\n",
-    "        color=palette(i),   # use 'color', not 'c'\n",
+    "        color=palette(i),\n",
     "        label=j\n",
     "    )\n",
     "plt.title('Logistic Regression (Training set)')\n",
