Changed folder strucuture for templates

--- a/Part 3 - Classification/Model Templates (Classification)/Jupyter NB Versions/1. decision_tree_classification.ipynb
+++ b/Part 3 - Classification/Model Templates (Classification)/Jupyter NB Versions/1. decision_tree_classification.ipynb
@@ -11,7 +11,8 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python"
   }
  },
  "cells": [
@@ -40,15 +41,19 @@
    "metadata": {
     "id": "YvGPUQaHhXfL",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-09-29T07:15:03.816773Z",
+     "start_time": "2025-09-29T07:15:02.350169Z"
+    }
    },
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ],
-   "execution_count": 0,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -65,15 +70,19 @@
    "metadata": {
     "id": "M52QDmyzhh9s",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-09-29T07:15:07.845422Z",
+     "start_time": "2025-09-29T07:15:07.825849Z"
+    }
    },
    "source": [
-    "dataset = pd.read_csv('Data.csv')\n",
+    "dataset = pd.read_csv('../Data.csv')\n",
     "X = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ],
-   "execution_count": 0,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
