Added hierarchy clustering approach for clustering data

--- a/Part 4 - Clustering/Section 24 - K-Means Clustering/k_means_clustering.ipynb
+++ b/Part 4 - Clustering/Section 24 - K-Means Clustering/k_means_clustering.ipynb
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T12:12:55.428841Z",
-     "start_time": "2025-10-02T12:12:51.375157Z"
+     "end_time": "2025-10-06T06:53:40.686008Z",
+     "start_time": "2025-10-06T06:53:37.204966Z"
     }
    },
    "cell_type": "code",
@@ -49,7 +49,7 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T12:13:15.155189Z",
-     "start_time": "2025-10-02T12:13:15.138532Z"
+     "end_time": "2025-10-06T06:53:43.339288Z",
+     "start_time": "2025-10-06T06:53:43.321410Z"
     }
    },
    "cell_type": "code",
@@ -79,7 +79,7 @@
     "X = dataset.iloc[:, [3, 4]].values # all rows, and only columns 3 and 4"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -99,8 +99,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T12:14:40.027018Z",
-     "start_time": "2025-10-02T12:14:39.974784Z"
+     "end_time": "2025-10-06T06:53:54.309517Z",
+     "start_time": "2025-10-06T06:53:45.404922Z"
     }
    },
    "cell_type": "code",
@@ -118,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T12:14:49.564227Z",
-     "start_time": "2025-10-02T12:14:49.506970Z"
+     "end_time": "2025-10-06T06:53:56.749428Z",
+     "start_time": "2025-10-06T06:53:56.571237Z"
     }
    },
    "cell_type": "code",
@@ -145,7 +145,7 @@
      }
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -163,12 +163,16 @@
    "metadata": {
     "SqlCellData": {
      "variableName$1": "df_sql1"
+    },
+    "ExecuteTime": {
+     "end_time": "2025-10-06T06:53:59.143473300Z",
+     "start_time": "2025-10-06T06:53:59.135968500Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "%%sql\n"
+   "source": "%%sql\n",
+   "outputs": []
   },
   {
    "metadata": {},
@@ -188,8 +192,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T12:23:44.758361Z",
-     "start_time": "2025-10-02T12:23:44.747328Z"
+     "end_time": "2025-10-06T06:54:01.297486Z",
+     "start_time": "2025-10-06T06:54:01.288050Z"
     }
    },
    "cell_type": "code",
@@ -212,7 +216,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -227,8 +231,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-02T13:12:28.975249Z",
-     "start_time": "2025-10-02T13:12:28.803958Z"
+     "end_time": "2025-10-06T06:54:03.282096Z",
+     "start_time": "2025-10-06T06:54:03.145399Z"
     }
    },
    "cell_type": "code",
@@ -260,7 +264,7 @@
      }
     }
    ],
-   "execution_count": 12
+   "execution_count": 7
   }
  ]
 }
