Cleaned up apriori associate rule learning file

--- a/Part 5 - Association Rule Learning/Section 28 - Apriori/apriori.ipynb
+++ b/Part 5 - Association Rule Learning/Section 28 - Apriori/apriori.ipynb
@@ -77,8 +77,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:22:06.816907Z",
-     "start_time": "2025-10-14T06:22:04.307044Z"
+     "end_time": "2025-10-14T06:54:22.041312Z",
+     "start_time": "2025-10-14T06:54:22.038470Z"
     }
    },
    "source": [
@@ -87,7 +87,7 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -106,8 +106,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:29:31.926372Z",
-     "start_time": "2025-10-14T06:29:31.739682Z"
+     "end_time": "2025-10-14T06:54:23.135014Z",
+     "start_time": "2025-10-14T06:54:22.967540Z"
     }
    },
    "source": [
@@ -117,7 +117,7 @@
     "    transactions.append([str(dataset.values[i, j]) for j in range (0, 20)]) # iterates through all rows and columns"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -136,8 +136,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:47:36.464592Z",
-     "start_time": "2025-10-14T06:47:36.456151Z"
+     "end_time": "2025-10-14T06:54:23.901258Z",
+     "start_time": "2025-10-14T06:54:23.898103Z"
     }
    },
    "source": [
@@ -146,7 +146,7 @@
     "                min_lift = 3, min_length = 2, max_length = 2)"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -184,21 +184,13 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:48:21.255175Z",
-     "start_time": "2025-10-14T06:48:21.252136Z"
+     "end_time": "2025-10-14T06:54:27.177133Z",
+     "start_time": "2025-10-14T06:54:27.113942Z"
     }
    },
    "source": "results = list(rules)",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object apriori at 0x000001C911651150>\n"
-     ]
-    }
-   ],
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "metadata": {
@@ -221,11 +213,12 @@
      "height": 191
     },
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:47:58.089677Z",
-     "start_time": "2025-10-14T06:47:58.083973Z"
+     "end_time": "2025-10-14T06:54:28.491485Z",
+     "start_time": "2025-10-14T06:54:28.486361Z"
     }
    },
    "cell_type": "code",
+   "source": "results",
    "outputs": [
     {
      "data": {
@@ -241,13 +234,12 @@
        " RelationRecord(items=frozenset({'shrimp', 'pasta'}), support=0.005065991201173177, ordered_statistics=[OrderedStatistic(items_base=frozenset({'pasta'}), items_add=frozenset({'shrimp'}), confidence=0.3220338983050847, lift=4.506672147735896)])]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6,
-   "source": "results"
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -266,8 +258,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-10-14T06:48:54.137453Z",
-     "start_time": "2025-10-14T06:48:54.127176Z"
+     "end_time": "2025-10-14T06:54:30.222465Z",
+     "start_time": "2025-10-14T06:54:30.215234Z"
     }
    },
    "source": [
@@ -281,7 +273,7 @@
     "resultsinDataFrame = pd.DataFrame(inspect(results), columns = ['Left Hand Side', 'Right Hand Side', 'Support', 'Confidence', 'Lift'])"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -313,119 +305,18 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 326
+    },
+    "ExecuteTime": {
+     "end_time": "2025-10-14T06:54:32.191761Z",
+     "start_time": "2025-10-14T06:54:32.183107Z"
     }
    },
    "source": [
     "resultsinDataFrame"
    ],
-   "execution_count": 0,
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Left Hand Side</th>\n",
-       "      <th>Right Hand Side</th>\n",
-       "      <th>Support</th>\n",
-       "      <th>Confidence</th>\n",
-       "      <th>Lift</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>light cream</td>\n",
-       "      <td>chicken</td>\n",
-       "      <td>0.004533</td>\n",
-       "      <td>0.290598</td>\n",
-       "      <td>4.843951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>mushroom cream sauce</td>\n",
-       "      <td>escalope</td>\n",
-       "      <td>0.005733</td>\n",
-       "      <td>0.300699</td>\n",
-       "      <td>3.790833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pasta</td>\n",
-       "      <td>escalope</td>\n",
-       "      <td>0.005866</td>\n",
-       "      <td>0.372881</td>\n",
-       "      <td>4.700812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>fromage blanc</td>\n",
-       "      <td>honey</td>\n",
-       "      <td>0.003333</td>\n",
-       "      <td>0.245098</td>\n",
-       "      <td>5.164271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>herb &amp; pepper</td>\n",
-       "      <td>ground beef</td>\n",
-       "      <td>0.015998</td>\n",
-       "      <td>0.323450</td>\n",
-       "      <td>3.291994</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>tomato sauce</td>\n",
-       "      <td>ground beef</td>\n",
-       "      <td>0.005333</td>\n",
-       "      <td>0.377358</td>\n",
-       "      <td>3.840659</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>light cream</td>\n",
-       "      <td>olive oil</td>\n",
-       "      <td>0.003200</td>\n",
-       "      <td>0.205128</td>\n",
-       "      <td>3.114710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>whole wheat pasta</td>\n",
-       "      <td>olive oil</td>\n",
-       "      <td>0.007999</td>\n",
-       "      <td>0.271493</td>\n",
-       "      <td>4.122410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>pasta</td>\n",
-       "      <td>shrimp</td>\n",
-       "      <td>0.005066</td>\n",
-       "      <td>0.322034</td>\n",
-       "      <td>4.506672</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "         Left Hand Side Right Hand Side   Support  Confidence      Lift\n",
        "0           light cream         chicken  0.004533    0.290598  4.843951\n",
@@ -437,55 +328,7 @@
        "6           light cream       olive oil  0.003200    0.205128  3.114710\n",
        "7     whole wheat pasta       olive oil  0.007999    0.271493  4.122410\n",
        "8                 pasta          shrimp  0.005066    0.322034  4.506672"
-      ]
-     },
-     "metadata": {
-      "tags": []
-     },
-     "execution_count": 8
-    }
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IjrrlYW4jpTR",
-    "colab_type": "text"
-   },
-   "source": [
-    "### Displaying the results sorted by descending lifts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "nI7DJXng-nxQ",
-    "colab_type": "code",
-    "outputId": "aac84e87-eb2a-4428-cf55-1c16d23ea3ed",
-    "executionInfo": {
-     "status": "ok",
-     "timestamp": 1589289766174,
-     "user_tz": -240,
-     "elapsed": 13166,
-     "user": {
-      "displayName": "Hadelin de Ponteves",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhEuXdT7eQweUmRPW8_laJuPggSK6hfvpl5a6WBaA=s64",
-      "userId": "15047218817161520419"
-     }
-    },
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 326
-    }
-   },
-   "source": [
-    "resultsinDataFrame.nlargest(n = 10, columns = 'Lift')"
-   ],
-   "execution_count": 0,
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -514,52 +357,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>fromage blanc</td>\n",
-       "      <td>honey</td>\n",
-       "      <td>0.003333</td>\n",
-       "      <td>0.245098</td>\n",
-       "      <td>5.164271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>light cream</td>\n",
        "      <td>chicken</td>\n",
        "      <td>0.004533</td>\n",
        "      <td>0.290598</td>\n",
        "      <td>4.843951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pasta</td>\n",
-       "      <td>escalope</td>\n",
-       "      <td>0.005866</td>\n",
-       "      <td>0.372881</td>\n",
-       "      <td>4.700812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>pasta</td>\n",
-       "      <td>shrimp</td>\n",
-       "      <td>0.005066</td>\n",
-       "      <td>0.322034</td>\n",
-       "      <td>4.506672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>whole wheat pasta</td>\n",
-       "      <td>olive oil</td>\n",
-       "      <td>0.007999</td>\n",
-       "      <td>0.271493</td>\n",
-       "      <td>4.122410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>tomato sauce</td>\n",
-       "      <td>ground beef</td>\n",
-       "      <td>0.005333</td>\n",
-       "      <td>0.377358</td>\n",
-       "      <td>3.840659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -570,12 +373,36 @@
        "      <td>3.790833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pasta</td>\n",
+       "      <td>escalope</td>\n",
+       "      <td>0.005866</td>\n",
+       "      <td>0.372881</td>\n",
+       "      <td>4.700812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fromage blanc</td>\n",
+       "      <td>honey</td>\n",
+       "      <td>0.003333</td>\n",
+       "      <td>0.245098</td>\n",
+       "      <td>5.164271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>herb &amp; pepper</td>\n",
        "      <td>ground beef</td>\n",
        "      <td>0.015998</td>\n",
        "      <td>0.323450</td>\n",
        "      <td>3.291994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tomato sauce</td>\n",
+       "      <td>ground beef</td>\n",
+       "      <td>0.005333</td>\n",
+       "      <td>0.377358</td>\n",
+       "      <td>3.840659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -585,29 +412,33 @@
        "      <td>0.205128</td>\n",
        "      <td>3.114710</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>whole wheat pasta</td>\n",
+       "      <td>olive oil</td>\n",
+       "      <td>0.007999</td>\n",
+       "      <td>0.271493</td>\n",
+       "      <td>4.122410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pasta</td>\n",
+       "      <td>shrimp</td>\n",
+       "      <td>0.005066</td>\n",
+       "      <td>0.322034</td>\n",
+       "      <td>4.506672</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "         Left Hand Side Right Hand Side   Support  Confidence      Lift\n",
-       "3         fromage blanc           honey  0.003333    0.245098  5.164271\n",
-       "0           light cream         chicken  0.004533    0.290598  4.843951\n",
-       "2                 pasta        escalope  0.005866    0.372881  4.700812\n",
-       "8                 pasta          shrimp  0.005066    0.322034  4.506672\n",
-       "7     whole wheat pasta       olive oil  0.007999    0.271493  4.122410\n",
-       "5          tomato sauce     ground beef  0.005333    0.377358  3.840659\n",
-       "1  mushroom cream sauce        escalope  0.005733    0.300699  3.790833\n",
-       "4         herb & pepper     ground beef  0.015998    0.323450  3.291994\n",
-       "6           light cream       olive oil  0.003200    0.205128  3.114710"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
-     "execution_count": 9
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   ]
+   ],
+   "execution_count": 22
   }
  ]
 }
