- added single comment prediction to the natural_language_processing and

--- a/Part 7 - Natural Language Processing/Section 36 - Natural Language Processing/natural_language_processing.ipynb
+++ b/Part 7 - Natural Language Processing/Section 36 - Natural Language Processing/natural_language_processing.ipynb
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:02:43.907238Z",
-     "start_time": "2025-11-11T08:02:39.765035Z"
+     "end_time": "2025-11-12T08:02:31.640237Z",
+     "start_time": "2025-11-12T08:02:27.840113Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:02:43.943370Z",
-     "start_time": "2025-11-11T08:02:43.923844Z"
+     "end_time": "2025-11-12T08:05:25.631464Z",
+     "start_time": "2025-11-12T08:05:25.604557Z"
     }
    },
    "cell_type": "code",
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:02:55.801791Z",
-     "start_time": "2025-11-11T08:02:47.467200Z"
+     "end_time": "2025-11-12T08:05:35.363590Z",
+     "start_time": "2025-11-12T08:05:26.935886Z"
     }
    },
    "cell_type": "code",
@@ -135,8 +135,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:02:56.755143Z",
-     "start_time": "2025-11-11T08:02:56.751123Z"
+     "end_time": "2025-11-12T08:05:36.765858Z",
+     "start_time": "2025-11-12T08:05:36.762820Z"
     }
    },
    "cell_type": "code",
@@ -174,8 +174,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:02:59.684523Z",
-     "start_time": "2025-11-11T08:02:59.665969Z"
+     "end_time": "2025-11-12T08:05:42.532685Z",
+     "start_time": "2025-11-12T08:05:42.519778Z"
     }
    },
    "cell_type": "code",
@@ -201,8 +201,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:03:01.855912Z",
-     "start_time": "2025-11-11T08:03:01.846581Z"
+     "end_time": "2025-11-12T08:05:44.522209Z",
+     "start_time": "2025-11-12T08:05:44.512832Z"
     }
    },
    "cell_type": "code",
@@ -226,8 +226,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:03:03.410779Z",
-     "start_time": "2025-11-11T08:03:03.362847Z"
+     "end_time": "2025-11-12T08:05:46.224464Z",
+     "start_time": "2025-11-12T08:05:46.177036Z"
     }
    },
    "cell_type": "code",
@@ -815,14 +815,68 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T08:03:04.982243Z",
-     "start_time": "2025-11-11T08:03:04.973234Z"
+     "end_time": "2025-11-12T08:05:48.193012Z",
+     "start_time": "2025-11-12T08:05:48.183779Z"
     }
    },
    "cell_type": "code",
    "source": "y_pred = classifier.predict(X_test)",
    "outputs": [],
    "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-12T08:38:15.354906Z",
+     "start_time": "2025-11-12T08:38:15.347537Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Single comment prediction (reusing existing cv, classifier, and preprocessing style)\n",
+    "\n",
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "\n",
+    "def preprocess_review(text: str) -> str:\n",
+    "    # Keep only letters\n",
+    "    text = re.sub('[^a-zA-Z]', ' ', text)\n",
+    "    text = text.lower().split()\n",
+    "    # Stemming with stopword removal, but keep 'not'\n",
+    "    ps = PorterStemmer()\n",
+    "    sw = set(stopwords.words('english'))\n",
+    "    if 'not' in sw:\n",
+    "        sw.remove('not')\n",
+    "    text = ' '.join(ps.stem(w) for w in text if w not in sw)\n",
+    "    return text\n",
+    "\n",
+    "# Example new comment\n",
+    "new_review_raw = \"I absolutely love how much I hate this restaurant, very disappointed!\"\n",
+    "new_review_clean = preprocess_review(new_review_raw)\n",
+    "\n",
+    "# Vectorize with the already-fitted CountVectorizer (cv)\n",
+    "X_new = cv.transform([new_review_clean]).toarray()\n",
+    "\n",
+    "# Predict with the already-fitted classifier\n",
+    "pred = classifier.predict(X_new)[0]\n",
+    "\n",
+    "print(\"Review:\", new_review_raw)\n",
+    "print(\"Preprocessed:\", new_review_clean)\n",
+    "print(\"Prediction:\", pred)  # typically 1 = positive, 0 = negative"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Review: I absolutely love how much I hate this restaurant, very disappointed!\n",
+      "Preprocessed: absolut love much hate restaur disappoint\n",
+      "Prediction: 0\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -887,6 +941,42 @@
     }
    ],
    "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Hello students,\n",
+    "\n",
+    "congratulations for having completed Part 7 - Natural Language Processing.\n",
+    "\n",
+    "If you are up for some practical activities, here is a little challenge:\n",
+    "\n",
+    "1. Run the other classification models we made in Part 3 - Classification, other than the one we used in the last tutorial.\n",
+    "\n",
+    "2. Evaluate the performance of each of these models. Try to beat the Accuracy obtained in the tutorial. But remember, Accuracy is not enough, so you should also look at other performance metrics like Precision (measuring exactness), Recall (measuring completeness) and the F1 Score (compromise between Precision and Recall). Please find below these metrics formulas (TP = # True Positives, TN = # True Negatives, FP = # False Positives, FN = # False Negatives):\n",
+    "\n",
+    "Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "\n",
+    "Precision = TP / (TP + FP)\n",
+    "\n",
+    "Recall = TP / (TP + FN)\n",
+    "\n",
+    "F1 Score = 2 * Precision * Recall / (Precision + Recall)\n",
+    "\n",
+    "3. Try even other classification models that we haven't covered in Part 3 - Classification. Good ones for NLP include:\n",
+    "\n",
+    "CART\n",
+    "C5.0\n",
+    "Maximum Entropy\n",
+    "Submit your results in the Q&A for this Lecture or by pm and justify in few words why you think it's the most appropriate model.\n",
+    "\n",
+    "Enjoy Machine Learning!\n",
+    "\n",
+    "Best to all,\n",
+    "\n",
+    "Hadelin"
+   ]
   }
  ]
 }
